--- a/index.html
+++ b/index.html
@@ -6,5 +6,27 @@
         <title>Document</title>
         <link rel="stylesheet" href="styles/style.css" />
     </head>
-    <body></body>
+    <body>
+        <div class="container">
+            <header><h1>Header</h1></header>
+
+            <div class="hero-main-sidebar-extra-wrapper">
+                <div class="hero-sidebar-wrapper">
+                    <section class="hero"><h1>Hero</h1></section>
+                    <aside class="sidebar"><h1>Sidebar</h1></aside>
+                </div>
+                <div class="hero-content-wrapper">
+                    <main><h1>Main</h1></main>
+                    <section class="extra-content"><h1>Extra Content</h1></section>
+                </div>
+            </div>
+
+            <div class="images-posts-wrapper">
+                <section class="related-images"><h1>Related Images</h1></section>
+                <section class="related-posts"><h1>Related Posts</h1></section>
+            </div>
+
+            <footer><h1>Footer</h1></footer>
+        </div>
+    </body>
 </html>
